Se mejoró la legibilidad del código